all UIs except MoodHistory

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".AddMoodActivity"></activity>
+        <activity android:name=".MoodHistory" />
+        <activity android:name=".OptionActivity" />
+        <activity android:name=".EditMoodActivity" />
         <activity android:name=".ProfileActivity" />
-<activity android:name=".LoginReg" />
-<activity android:name=".MainActivity">
-<intent-filter>
-    <action android:name="android.intent.action.MAIN" />
+        <activity android:name=".LoginReg" />
+        <activity android:name=".MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-    <category android:name="android.intent.category.LAUNCHER" />
-</intent-filter>
-</activity>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
-    </manifest>
+</manifest>
