--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CustomMoodHistory"></activity>
+        <activity android:name=".FriendDetailActivity"></activity>
+        <activity android:name=".FriendMoodHistoryActivity" />
+        <activity android:name=".SearchResultActivity" />
+        <activity android:name=".AcceptFriendActivity" />
+        <activity android:name=".FriendActivity" />
+        <activity android:name=".CustomMoodHistory" />
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
