--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,11 @@
         <activity android:name=".EditActivity" />
         <activity android:name=".ViewPictureActivity" />
         <activity android:name=".RegisterActivity" />
+        <activity android:name=".FriendAcceptActivity" />
+        <activity android:name=".FriendAskActivity" />
+        <activity android:name=".FriendEditActivity" />
+        <activity android:name=".FriendListActivity" />
+        <activity android:name=".MoodFriendHistoryActivity" />
     </application>
 
 </manifest>
