--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+
+
+
+
+
+    testOptions {
+        unitTests.returnDefaultValues = true}
+
+
 }
 
 dependencies {
@@ -36,3 +46,5 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
 }
 apply plugin: 'com.google.gms.google-services'
+
+
