--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Nov 08 14:52:27 MST 2019
-sdk.dir=C\:\\Users\\ohi-i\\AppData\\Local\\Android\\Sdk
+#Wed Nov 27 19:38:22 MST 2019
+sdk.dir=/Users/chaoyicheng/Library/Android/sdk
